--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/cbejar93/RottenOranges#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "mongoose": "^5.3.10",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   }
