--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -21,8 +24,11 @@
   },
   "homepage": "https://github.com/cbejar93/RottenOranges#readme",
   "dependencies": {
+    "concurrently": "^4.0.1",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.10",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   }
